<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnRecent"
        android:textStyle="bold"
        style="@style/PrimaryFlatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RecentFeed" />

    <Button
        android:id="@+id/btnSports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Desporto" />

    <Button
        android:id="@+id/search_go_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

</LinearLayout>